add logs in test report, update README